Added more content

--- a/index.html
+++ b/index.html
@@ -6,11 +6,35 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
-    <header>
+    <!-- FCC Format Test Script -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <header id="header">
+      <!-- Company Logo -->
+      <img id="header-img" src="#" alt="">
+      <!-- Navigation Bar -->
+      <nav id="nav-bar">
+        <a href="#" class="nav-link">Link 1</a>
+        <a href="#" class="nav-link">Link 2</a>
+        <a href="#" class="nav-link">Link 3</a>
+      </nav>
+      <!-- Main Section -->
+      <main>
+        <!-- Video -->
+        <video id="video" src="videofile.ogg" autoplay poster="posterimage.jpg">
 
+        </video>
+        <!-- Form Section -->
+        <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
+          <label for="email" id="email">
+            <input type="email" placeholder="email@address.com" id="email" name="email" required>
+          </label>
+          <input id="submit" type="submit" name="submit" value="Submit">
+        </form>
+
+      </main>
     </header>
     <main>
-      
+
     </main>
     <footer></footer>
   </body>
