Added some tests with color and new font-family.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Product Landing Page</title>
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- FCC Format Test Script -->
@@ -13,9 +14,9 @@
       <img id="header-img" src="#" alt="">
       <!-- Navigation Bar -->
       <nav id="nav-bar">
-        <a href="#" class="nav-link">Link 1</a>
-        <a href="#" class="nav-link">Link 2</a>
-        <a href="#" class="nav-link">Link 3</a>
+        <a href="#" class="nav-link">Our Mission</a>
+        <a href="#" class="nav-link">Who Are We?</a>
+        <a href="#" class="nav-link">Future Projects/Events</a>
       </nav>
       <!-- Main Section -->
       <main>
@@ -30,6 +31,11 @@
           </label>
           <input id="submit" type="submit" name="submit" value="Submit">
         </form>
+
+        <h1 id="light">This is a heading</h1>
+        <h3 id="bold">This is sub-heading</h3>
+        <p id="reg">This is a paragraph with words and stuff!</p>
+
 
       </main>
     </header>
